header sticky bugs align from left

--- a/apps/web-giddh/src/app/reports/components/purchase-register-expand-component/purchase.register.expand.component.scss
+++ b/apps/web-giddh/src/app/reports/components/purchase-register-expand-component/purchase.register.expand.component.scss
@@ -320,6 +320,10 @@ table th {
     );
 }
 
+.header-fix {
+    left: 0;
+}
+
 @media screen and (max-width: 768px) {
     .giddh-table {
         tbody {
